[tool.poetry]
name = "fbkbenchpress"
version = "0.1.0"
description = "Facebook kernel team's test runner"
authors = ["Vinnie Magro <vmagro@fb.com>"]
license = "BSD-3-Clause"
packages = [
    { include = "benchpress" },
]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^3.13"
dataclasses = "^0.6.0"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
pyfakefs = "^3.5"
pytest = "^4.1"
black = "^18.9b0"

[tool.poetry.scripts]
benchpress = 'benchpress_cli:entry_point'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
